# agentii

./: .gitignore  CLAUDE.md  README_e2e.md
backend/: .env.example  Cargo.toml  README.md  README_quickstart.md  mock_parity_scenarios.json
backend/crates/agent/agentii-api/: Cargo.toml
backend/crates/agent/agentii-api/benches/: request_building.rs
backend/crates/agent/agentii-api/src/: client.rs  lib.rs  prompt_cache.rs  types.rs
backend/crates/agent/agentii-api/src/providers/: anthropic.rs  genai_bridge.rs  mod.rs  (+2 more)
backend/crates/agent/agentii-api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs  proxy_integration.rs
backend/crates/agent/agentii-cli/: Cargo.toml
backend/crates/agent/agentii-cli/src/: init.rs  main.rs  main.rs.backup  tui.rs
backend/crates/agent/agentii-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs  unix_composability.rs
backend/crates/agent/agentii-commands/: Cargo.toml
backend/crates/agent/agentii-commands/src/: lib.rs
backend/crates/agent/agentii-compat-harness/: Cargo.toml
backend/crates/agent/agentii-compat-harness/src/: lib.rs
backend/crates/agent/agentii-core/: Cargo.toml
backend/crates/agent/agentii-core/src/: config.rs  config_validate.rs  conversation.rs  lib.rs  oauth.rs  permissions.rs  prompt.rs  session_control.rs  stale_base.rs  worker_boot.rs
backend/crates/agent/agentii-core/tests/: integration_tests.rs
backend/crates/agent/agentii-data-api/: Cargo.toml
backend/crates/agent/agentii-data-api/src/: agentic_retrieval.rs  auth.rs  companies.rs  documents.rs  lib.rs
backend/crates/agent/agentii-financial-mcp-server/: Cargo.toml
backend/crates/agent/agentii-financial-mcp-server/src/: main.rs
backend/crates/agent/agentii-financial-memory/: Cargo.toml
backend/crates/agent/agentii-financial-memory/src/: context_generator.rs  file_watcher.rs  lib.rs  parser.rs  prompt_injection.rs  templates.rs
backend/crates/agent/agentii-financial-memory/templates/: agentii_skeleton.md  style_skeleton.md
backend/crates/agent/agentii-financial-tools/: Cargo.toml
backend/crates/agent/agentii-financial-tools/renderers/: audit.py  render_3statement.py  render_comps.py  render_dcf.py  render_lbo.py
backend/crates/agent/agentii-financial-tools/src/: citation_regex.txt  company.rs  lib.rs  market_context.rs  orders.rs  retrieval.rs  statements.rs  xlsx.rs  xlsx_errors.rs  xlsx_spec.schema.json
backend/crates/agent/agentii-gateway-bridge/: Cargo.toml
backend/crates/agent/agentii-gateway-bridge/src/: bridge.rs  lib.rs
backend/crates/agent/agentii-mock-service/: Cargo.toml
backend/crates/agent/agentii-mock-service/src/: lib.rs  main.rs
backend/crates/agent/agentii-plugins/: Cargo.toml
backend/crates/agent/agentii-plugins/src/: lib.rs  test_isolation.rs
backend/crates/agent/agentii-prompts/: Cargo.toml
backend/crates/agent/agentii-prompts/src/: agentic_search.rs  financial_analyst.rs  financial_context.rs  financial_retrieval_agent.rs  lib.rs
backend/crates/agent/agentii-telemetry/: Cargo.toml
backend/crates/agent/agentii-tools/: Cargo.toml
backend/crates/agent/agentii-tools/src/: lane_completion.rs  lib.rs
backend/crates/host/agentii-gateway/: Cargo.toml
backend/crates/host/agentii-gateway/src/: auth.rs  chat_proxy.rs  lib.rs  main.rs  router.rs  rpc_extensions.rs  server.rs  workspace_init.rs  workspace_provision.rs
backend/crates/host/agentii-pty-proxy/: Cargo.toml
backend/crates/host/agentii-pty-proxy/src/: lib.rs  pty_manager.rs  relay.rs  rpc.rs
backend/crates/host/agentii-vm/: Cargo.toml
backend/crates/host/agentii-vm/src/: backend.rs  base_image.rs  cli_config.rs  cli_install.rs  cli_registry.rs  config_accessor.rs  credentials.rs  export.rs  extension_registry.rs  instance.rs  keys.rs  lib.rs  lima.rs  mcp_config.rs  mount.rs  observability.rs  orbstack.rs  permissions.rs  persistent.rs  pool.rs  provisioner.rs  sync.rs  system_prompt.rs
backend/crates/host/agentii-vm/templates/: agentii-base.yaml
backend/crates/host/agentii-vm/tests/: base_image.rs  benchmark.rs  disk_benchmark.rs  e2b_mock.rs  e2e.rs  eviction.rs  export.rs  keys.rs  lifecycle.rs  mount.rs  provisioner.rs  security.rs
backend/crates/shared/agentii-protocol/: Cargo.toml
backend/crates/shared/agentii-protocol/src/: agent_events.rs  cli_profile.rs  cli_registry.rs  gateway.rs  lib.rs  messages.rs  provider.rs  stream.rs  terminal.rs  vm.rs
backend/docs/: skill-authoring.md
backend/scripts/: agentii-vm.yaml  build-vm-image.sh
backend/skills/agentic-search/: SKILL.md
backend/skills/earnings-analysis/: SKILL.md
backend/skills/financial-analyst/: SKILL.md
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/memory/: bootstrap.rs  flush_prompt.rs  inject.rs  mod.rs  session_capture.rs  system_prompt.rs
frontend/src-tauri/src/rpc/: memory_handlers.rs  mod.rs
frontend/src-tauri/src/security/: leak_detector.rs  mod.rs
frontend/src-tauri/templates/: agentii_skeleton.md  memory_flush_prompt.md  memory_system_prompt.md  style_skeleton.md
models/: README.md  pyproject.toml
models/src/agentii_models/: __init__.py  _base.py  analytics.py  biotech.py  enums.py  instruments.py  options.py  orders.py  portfolio.py  providers.py  stocks.py  types.py
models/src/gis_models/: __init__.py  eia.py  enums.py  graph.py  vessels.py  weather.py
models/tests/: conftest.py  test_analytics.py  test_biotech.py  test_edge_cases.py  test_enums.py  test_gis_models.py  test_instruments.py  test_options.py  test_orders.py  test_portfolio.py  test_providers.py  test_serialization.py  test_stocks.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gateway.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  files.rs  mod.rs  notifications.rs  settings.rs
src-tauri/src/security/: encryption.rs  file_storage.rs  mod.rs
(+363 files in other folders)
