[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentii-models"
version = "0.1.0"
description = "Shared Pydantic v2 data models for the Agentii financial IDE — US stocks, options, biotech catalysts, portfolio, and provider abstraction."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
json = ["orjson>=3.9"]
parquet = ["pyarrow>=14.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]
all = ["agentii-models[json,parquet]"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentii_models", "src/gis_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
