[package]
name = "agentii"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentii_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
