[package]
name = "agentii-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
agentii-core = { path = "../agentii-core" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
agentii-telemetry = { path = "../agentii-telemetry" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
