[package]
name = "agentii-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
agentii-plugins = { path = "../agentii-plugins" }
agentii-core = { path = "../agentii-core" }
serde_json.workspace = true
