[package]
name = "agentii-compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agentii-commands = { path = "../agentii-commands" }
agentii-tools = { path = "../agentii-tools" }
agentii-core = { path = "../agentii-core" }

[lints]
workspace = true
