[package]
name = "agentii-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
agentii-plugins = { path = "../agentii-plugins" }
agentii-prompts = { path = "../agentii-prompts" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
agentii-telemetry = { path = "../agentii-telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
