[package]
name = "agentii-data-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
