[package]
name = "agentii-financial-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
agentii-prompts = { path = "../agentii-prompts" }
notify = { version = "7", features = ["macos_fsevent"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
