[package]
name = "agentii-mock-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "agentii-mock-service"
path = "src/main.rs"

[dependencies]
agentii-api = { path = "../agentii-api" }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }

[lints]
workspace = true
