[package]
name = "agentii-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agentii-api = { path = "../agentii-api" }
agentii-commands = { path = "../agentii-commands" }
agentii-financial-tools = { path = "../agentii-financial-tools" }
agentii-prompts = { path = "../agentii-prompts" }
flate2 = "1"
agentii-plugins = { path = "../agentii-plugins" }
agentii-core = { path = "../agentii-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
