[package]
name = "agentii-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VM lifecycle management for Agentii sandbox (Lima/OrbStack)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
keyring = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
agentii-protocol = { path = "../../shared/agentii-protocol" }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
