[package]
name = "agentii-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol types for Agentii (terminal RPC, gateway frames, VM config, agent events)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
